--- a/public/html/games.html
+++ b/public/html/games.html
@@ -10,7 +10,7 @@
     <h1>Welcome to the Main Page for Web API for Games</h1>
 
     <h2>My Top 10 Games</h2>
-    <a href="addItem.html"><button>Add a game</button></a>
+    <a href="/html/addItem.html"><button class="add-button">Add a game</button></a>
     <br>
     <div id="games-container"></div>
     <script src="/js/script.js"></script>
@@ -18,5 +18,6 @@
  
 
     <a href="login.html">Login</a>
+    <a href="/logout">Logout</a>
 </body>
 </html>
