--- a/public/index.html
+++ b/public/index.html
@@ -8,10 +8,8 @@
 </head>
 <body>
     <h1>Welcome to the Main Page for Web API for Games</h1>
-
-    
-    <a href="html/games.html">Top Games</a>
+    <a href="html/games.html">View Games List</a>
+    <a href="html/register.html">Register</a>
     <a href="html/login.html">Login</a>
-    <a href="html/addItem.html">Add an Item to List</a>
 </body>
 </html>
